--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,28 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/weblogo.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style/style.css">
-    <title>WeatherToday</title>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-              <img src="/images/weblogo.png" alt=""  width="38" height="35" class="d-inline-block align-text-top">
-            WeatherToday.com</a>
-            <form class="d-flex" action="/" method="post">
-              <input class="form-control me-2" name="city" type="search" placeholder="Search a city" aria-label="Search" >
-              <button class="btn btn-outline-success" type="submit">Search</button>
+<%- include("header") -%>
+      <ul>
+        <li><a href="#">today</a></li>
+        <li><a href="#">hourly</a></li>
+        <li><a href="#">weekly</a></li>
+      </ul>
+      <nav>
+            <form class="" action="/" method="post">
+              <input class="" name="city" type="search" placeholder="Search a city" aria-label="Search" >
+              <button class="" type="submit">Search</button>
             </form>
-          </div>
-        </div>
       </nav>
-      
-      
-</body>
-</html>
+      <script>
+      let imgno = Math.floor(Math.random()*4);
+      document.body.background = 'images/'+imgno+'.jpg';
+      document.body.style.backgroundSize = "cover";
+      </script>
+ <%- include("footer") -%>  
+
