--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
         <li><a href="#">weekly</a></li>
       </ul>
       <nav>
-        <form class="" action="/searchloc" method="get">
+        <form class="" action="/searchloc" method="post">
           <input class="" name="city" type="search" placeholder="Search a city" aria-label="Search" >
           <button class="" type="submit">Search</button>
         </form>
