--- a/views/searchloc.ejs
+++ b/views/searchloc.ejs
@@ -6,7 +6,12 @@
     <div class="icon">
       <img src="<%=icon%>" alt="">
     </div>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <div class="currenttemp">
+      <div id="temp"><%=currenttemp%></div>
+      </div>
+      <div class="unit">°C</div>
+    <p class="card-text"></p>
+
     <a href="#">Go somewhere</a>
   </div>
 </div>
