--- a/public/style/style.css
+++ b/public/style/style.css
@@ -13,9 +13,17 @@
 }
 .icon{
     display: inline-block;
+    height: 75px;
+    width: 75px;
 }
-#temp{
+.currenttemp{
     display: inline-block;
-    font-size: larger;
-    font-size: 50%;
+    /* font-size: larger;
+    font-size: 50%; */
+}
+.unit{
+    display: inline-block;
+}
+.description{
+    text-transform: capitalize;
 }
