--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/weblogo.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/style/style.css">
     <title>Forecast</title>
 
 </head>
+
 <body>
     <script>
-        let imgno = Math.floor(Math.random()*2);
-        document.body.background = 'images/'+imgno+'.jpg';
+        let imgno = Math.floor(Math.random() * 2);
+        document.body.background = 'images/' + imgno + '.jpg';
         document.body.style.backgroundSize = "cover";
-      </script>
+        document.body.style.backgroundAttachment = "fixed";
+    </script>
+    <nav>
+        <ul>
+            <li><a href="http://localhost:3000/">Home</a></li>
+            <li><a href="#daily">Daily</a></li>
+            <li><a href="#hourly">Hourly</a></li>
+        </ul>
+    </nav>
