--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,7 +1,5 @@
-*{
-    margin: 0;
-    padding: 0;
-}
+body { padding-top: 70px; }
+
 /* nav {
     overflow: hidden;
     background-color: #333;
@@ -20,10 +18,9 @@
     font-size: 17px;
   } */
   
-  nav a:hover {
-    background: #ddd;
-    color: black;
-  }
+.navbar{
+    background-color: rgb(0, 0, 0.3);  
+}
 .card {
     color: white;
     background-color: rgb(0, 0, 0.3);
