Added other feautures

--- a/views/searchloc.ejs
+++ b/views/searchloc.ejs
@@ -265,5 +265,28 @@
   <br>
   <div class="heading"><h1><span>Day Details:</span></h1></div>
   <br>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          Sunrise: 
+          <img src="/images/icons8-sun.png" width="30" height="30" alt="">
+          <%=sunrise%>
+          <br>
+          Sunset: <img src="/images/icons8-sun.png" width="30" height="30" alt="">
+          <%=sunset%>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+        
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        
+        </div>
+      </div>
+    </div>
+  </div>
 
 <%- include("footer") -%>
