--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,7 +8,9 @@
     <link rel="shortcut icon" href="images/weblogo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style/style.css">
+
     <title>Forecast</title>
 
 </head>
@@ -20,10 +22,28 @@
         document.body.style.backgroundSize = "cover";
         document.body.style.backgroundAttachment = "fixed";
     </script>
-    <nav>
-        <ul>
-            <li><a href="http://localhost:3000/">Home</a></li>
-            <li><a href="#daily">Daily</a></li>
-            <li><a href="#hourly">Hourly</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="/images/weblogo.png" width="30" height="30" alt="">
+              </a>
+            <a class="navbar-brand" href="#">Weather.com</a>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#daily">Daily</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#hourly">Hourly</a>
+                </li>
+            </ul>
+            <form action="/" method="post" class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2"  name="city" type="search" placeholder="Search for city" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+            </div>
+        </div>
+        
     </nav>
