--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,7 +8,12 @@
     <link rel="shortcut icon" href="images/weblogo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style/style.css">
 
     <title>Forecast</title>
@@ -26,7 +31,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="/images/weblogo.png" width="30" height="30" alt="">
-              </a>
+            </a>
             <a class="navbar-brand" href="#">Weather.com</a>
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
@@ -40,10 +45,11 @@
                 </li>
             </ul>
             <form action="/" method="post" class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2"  name="city" type="search" placeholder="Search for city" aria-label="Search">
+                <input class="form-control mr-sm-2" name="city" type="search" placeholder="Search for city"
+                    aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
-            </div>
         </div>
-        
+        </div>
+
     </nav>
