made changes in style added circular percentage meter for  humidity

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,31 @@
 <%- include("header") -%>
-    
-        
+<!-- <rssapp-imageboard id="BYWRXfY1NMfGmOGB"></rssapp-imageboard><script src="https://widget.rss.app/v1/imageboard.js" type="text/javascript" async></script> -->
+<!-- <rssapp-list id="BYWRXfY1NMfGmOGB"></rssapp-list><script src="https://widget.rss.app/v1/list.js" type="text/javascript" async></script> -->
+<!-- <rssapp-list id="BYWRXfY1NMfGmOGB"></rssapp-list><script src="https://widget.rss.app/v1/list.js" type="text/javascript" async></script>
+         -->
+         <!-- <rssapp-magazine id="BYWRXfY1NMfGmOGB"></rssapp-magazine><script src="https://widget.rss.app/v1/magazine.js" type="text/javascript" async></script> -->
       
         
 
   
- <%- include("footer") -%>  
+</div>
+<div class="fixed-bottom">
+<footer id="footer" >
+    <div class="text-center p-3" style="background-color:  #413F42;">
+        <div>
+            <a class="navbar-brand" href="#">
+                <img src="/images/weblogo.png" width="50" height="50" alt="">
+            </a>
+        </div>
+        <!-- <div class="text-white"><p>&copy;2022 Weather.com</p></div> -->
+        <div class="text-white">Made with ❤ by Gaurav, Alankar, Sanu and Ganesh ;)</div>
+        
+    </div>
+</footer>
+</div>
+</div>
+</body>
+
+
+</html> 
 
