--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,16 +11,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/fe4ba9c579.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Nunito+Sans:wght@300&display=swap"
+    rel="stylesheet">
+
     <link rel="stylesheet" href="/style/style.css">
 
     <title>Forecast</title>
 
 </head>
 
-<body>
+<body d-flex flex-column min-vh-100>
     <script>
         let imgno = Math.floor(Math.random() * 2);
         document.body.background = 'images/' + imgno + '.jpg';
@@ -44,12 +47,21 @@
                     <a class="nav-link" href="#hourly">Hourly</a>
                 </li>
             </ul>
-            <form action="/" method="post" class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" name="city" type="search" placeholder="Search for city"
-                    aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+        
+        <form action="/" method="post" style="margin-top:9px;">
+        <div class="p-1 bg-light rounded rounded-pill shadow-sm mb-4">
+            <div class="input-group">
+                <input name="city" type="search" placeholder="Search for a city..." aria-describedby="button-addon1"
+                    class="form-control border-0 bg-light">
+                <div class="input-group-append">
+                    <button id="button-addon1" type="submit" class="btn btn-link text-primary"><i
+                            class="fa fa-search"></i></button>
+                </div>
+            </div>
         </div>
-        </div>
+    </form>
 
     </nav>
+
+
+    
