--- a/views/header.ejs
+++ b/views/header.ejs
@@ -24,12 +24,22 @@
 </head>
 
 <body d-flex flex-column min-vh-100>
-    <script>
-        let imgno = Math.floor(Math.random() * 2);
+    <!-- <script>
+        
         document.body.background = 'images/' + imgno + '.jpg';
         document.body.style.backgroundSize = "cover";
         document.body.style.backgroundAttachment = "fixed";
-    </script>
+    </script> -->
+    <div class="ct">
+    <video autoplay muted loop id="myVideo" style=" position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;">
+        <%let imgno = Math.floor(Math.random() * 2);%>
+        <source src="/images/<%=imgno%>.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+      </video>
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
