--- a/views/searchloc.ejs
+++ b/views/searchloc.ejs
@@ -671,25 +671,4 @@
   </style>
   </div>
 
-  <footer class="footer" ">
-    <div class="ct" style="z-index:1;position: absolute;width:100%;">
-      <div class="text-center p-3" style="background-color:  #413F42;padding: 0;">
-        <div>
-          <a class="navbar-brand" href="#">
-            <img src="/images/weblogo.png" width="50" height="50" alt="">
-          </a>
-        </div>
-        <div class="text-white">
-          <p>&copy;2022 Weather.com</p>
-        </div>
-        <div class="text-white">Made with ❤ by Gaurav, Alankar, Sanu and Ganesh ;)</div>
-
-      </div>
-    </div>
-  </footer>
-
-  </div>
-  </body>
-
-
-  </html>
+  <%- include("footer") -%>
