--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
             </a>
         </div>
         <!-- <div class="text-white"><p>&copy;2022 Weather.com</p></div> -->
-        <div class="text-white">Made with ❤ by Gaurav, Alankar, Sanu and Ganesh ;)</div>
+        <div class="text-white">Made with ❤ by Gaurav;) </div>
         
     </div>
 </footer>
