--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -9,7 +9,7 @@
         <div class="text-white">
           <p>&copy;2022 Weather.com</p>
         </div>
-        <div class="text-white">Made with ❤ by Gaurav, Alankar, Sanu and Ganesh ;)</div>
+        <div class="text-white">Made with ❤ by Gaurav ;)</div>
 
       </div>
     </div>
